Document String hash selection